--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adopt'
+        distribution: 'corretto'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml --fail-at-end
