--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,7 @@ jobs:
       - name: Publish test report
         uses: scacap/action-surefire-report@v1
         if: ${{ always() }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
